# fetter-orb

./: README.md
.github/workflows/: ci-console.yml  ci-model.yml  ci.yml
doc/: schema.dot
model/: Cargo.toml
model/src/: db_context.rs  main.rs
model/tests/: db_fixture.rs  test_db_context.rs
model/tests/fixtures/: monitor-scan-01.json
orb-console/: README.md  jest.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.jest.json  tsconfig.json
orb-console/src/: next-auth.d.ts  types.ts
orb-console/src/app/: globals.css  layout.tsx  page.tsx
orb-console/src/app/api/[...path]/: route.ts
orb-console/src/app/api/model/[...path]/: route.ts
orb-console/src/app/app/: page.tsx
orb-console/src/app/docs/: page.tsx
orb-console/src/app/lookup/: page.tsx
orb-console/src/app/mcp/: page.tsx
orb-console/src/components/: AccountDelete.tsx  AllowIcon.tsx  AllowListEditor.tsx  AppContent.tsx  CollapseButton.tsx  Dashboard.tsx  DashboardStatus.tsx  Footer.tsx  HeaderPreAuth.tsx  IconApple.tsx  IconLinux.tsx  ImageLightbox.tsx  LandingFeature.tsx  Loading.tsx  PackageCard.test.tsx  PackageCard.tsx  PackageCountsChart.tsx  PackageVersionsCard.tsx  Privacy.tsx  PrivacyContent.tsx  SessionWrapper.tsx  Spinner.tsx  SystemStatsChart.tsx  SystemTagActiveIcon.tsx  SystemTagCard.tsx  SystemTagSelector.tsx  TabAccount.tsx  TabAllow.tsx  TabPackages.tsx  TabSelector.tsx  TabSystems.tsx  TabTenant.tsx  TabVulns.tsx  TenantCard.tsx  TenantNew.tsx  TenantRename.tsx  TenantSelector.tsx  Terms.tsx  TermsContent.tsx  UserMenuDropdown.tsx  (+8 more)
orb-console/src/hooks/: useDashboardData.ts
orb-console/src/pages/api/auth/: [...nextauth].ts
orb-console/src/utils/: vulnerabilityScore.ts  vulnerabilityScore.tsx
orb-model/: .gitignore  Cargo.toml
orb-model/src/: db_context.rs  db_pool.rs  db_via_container.rs  env_loader.rs  lib.rs  main.rs
orb-model/tests/: test_db_context.rs
orb-model/tests/fixtures/: monitor-scan-01.json  monitor-scan-02.json  monitor-scan-03.json  monitor-scan-04.json  monitor-scan-05.json
