[package]
name = "fetter-orb-model"
version = "0.1.0"
edition = "2021"

[dependencies]
fetter = "1.12.0"
chrono = "0.4.40"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

