[package]
name = "orb-model"
version = "0.8.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
fetter = "1.22.0"
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "runtime-tokio-rustls", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5.2"
tower-http = { version = "0.5", features = ["cors", "catch-panic"] }
sha2 = "0.10.9"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

