[package]
name = "orb-model"
version = "0.10.0"
edition = "2021"

[features]
default = [] # for DBContext as library only
server = ["dep:axum", "dep:tower", "dep:tower-http"]

[dependencies]
fetter = "2.9.0"

axum = {version = "0.8.3", optional = true}
tower = {version = "0.5.2", optional = true}
tower-http = {version = "0.5", features = ["cors", "catch-panic"], optional = true }

chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "runtime-tokio-rustls", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10.9"
uuid = { version = "1.18.0", features = ["v4", "serde"] }


[[bin]]
name = "orb-model"
path = "src/main.rs"
required-features = ["server"]

